syntax = "proto3";
package auth_proto;

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc IsEmailRegistered(IsEmailRequest) returns (IsEmailResponse) {}
  rpc IsUserRegistered(IsUserRequest) returns (IsUserResponse) {}
  rpc IsRegistered(IsRegisteredRequest) returns (IsRegisteredResponse) {}
  rpc SignIn(SignInRequest) returns (Token) {}
  rpc Register(RegisterRequest) returns (Response) {}
}

message SignInRequest {
  string Username = 1;
  string Password = 2;
}

message Token {
  string Token = 1;
  google.protobuf.Timestamp TokenExpiration = 2;
}

message RegisterRequest {
  string Email = 1;
  string Username = 2;
  string Password = 3;
}

message Response {
  int32 status = 1;
}

message IsEmailRequest {
  string Email = 1;
}

message IsEmailResponse {
  bool IsEmailRegistered = 1;
}

message IsUserRequest {
  string Username = 1;
}

message IsUserResponse {
  bool IsUserRegistered = 1;
}

message IsRegisteredRequest {
  string Username = 1;
  string Email = 2;

}

message IsRegisteredResponse {
  bool IsUserRegistered = 1;
  bool IsEmailRegistered = 2;
}